Fix as-split component 64px top margin causing white space
- Changed as-split margin-top from 64px to 0
- The 64px margin was compensating for the removed toolbar
- Eliminates unwanted white space above split-panel-header elements
- Content now flows properly to the top edge

--- a/src/app/lesson-tree-container/lesson-tree-container.component.css
+++ b/src/app/lesson-tree-container/lesson-tree-container.component.css
@@ -23,7 +23,7 @@
   as-split {
     height: 100%;
     width: 100%;
-    margin-top: 64px;
+    margin-top: 0;
   }
   
   as-split-area {
